--- a/M2-D5/index.html
+++ b/M2-D5/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark ml-5">
+  <nav class="navbar navbar-expand-lg navbar-dark ml-5">
     <a class="navbar-brand" href="#"
       ><img src="assets/netflix_logo.png" height="40" alt=""
     /></a>
