--- a/M2-D5/settings.html
+++ b/M2-D5/settings.html
@@ -146,7 +146,13 @@
 
      }
 
+nav{
+  background-color: #141414;
+}
 
+.extraMarginBot{
+  margin-bottom: 128px;
+}
      
 @media (max-width: 576px) { 
 
@@ -155,7 +161,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="#"
       ><img src="assets/netflix_logo.png" height="40" alt=""
     /></a>
@@ -328,7 +334,7 @@
       </div>
     </div>
   </div>
-  <div class="container">
+  <div class="container extraMarginBot">
     <hr>
     <div class="row">
       <div class="col-12 col-md-3">
