--- a/M2-D5/index.html
+++ b/M2-D5/index.html
@@ -7,12 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
   <title>Netflix</title>
 
+<!-- Bootstrap Jquery and Poppers -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
 
   <!-- Our CSS  -->
@@ -49,21 +51,48 @@
     </div>
     <div class="d-none d-lg-block">
       <ul class="navbar-nav mr-auto">
-        <li> <a class="nav-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+        <li>
+           <a class="nav-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
               fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
               <path
                 d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-            </svg></a></li>
-        <li><a class="nav-link" href="#">KIDS</a></li>
-        <li><a class="nav-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a class="nav-link" href="#">KIDS</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
               fill="currentColor" class="bi bi-bell-fill" viewBox="0 0 16 16">
               <path
                 d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z" />
-            </svg></a></li>
-        <li><a class="nav-link dropdown" href="profile.html"><img src="assets/who.png" width="25" height="25"
-              viewBox="0 0 16 16alt="></a></li>
-        <li><a class="btn btn-ghost dropdown-toggle text-white" style="padding-left:0rem;" data-toggle="dropdown"
-            href=""></a></li>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a class="nav-link dropdown" href="profile.html">
+            <img src="assets/who.png" width="25" height="25"
+              viewBox="0 0 16 16alt=">
+            </a>
+        </li>
+        <li class="nav-item dropdown"> 
+          <a class="nav-link dropdown-toggle text-white" id="navbarDropdown" 
+            href="#" 
+            role="button" 
+            data-toggle="dropdown"
+            style="padding-left:0rem;" 
+            aria-expanded="false">a
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li>
+              <a class="dropdown-item" href="#">Action</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#">Another action</a>
+            </li>
+          </ul>
+        </li>
       </ul>
     </div>
 
@@ -288,7 +317,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
     crossorigin="anonymous"></script>
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
