--- a/M2-D5/index.html
+++ b/M2-D5/index.html
@@ -82,7 +82,7 @@
             role="button" 
             data-toggle="dropdown"
             style="padding-left:0rem;" 
-            aria-expanded="false">a
+            aria-expanded="false">
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li>
